--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ celerybeat-schedule
 env/
 venv/
 ENV/
+venv3/
 
 # Spyder project settings
 .spyderproject
@@ -100,3 +101,6 @@ ENV/
 
 # sublimetext
 wezzer.sublime-workspace
+
+# PyCharm
+.idea/
